--- a/src/components/burger/build-controls/build-control/build-control.module.css
+++ b/src/components/burger/build-controls/build-control/build-control.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 3px 0;
+  margin: 3px 10px;
   /* color: red; */
 }
 
