finish local burger builder

--- a/src/components/navigation/toolbar/toolbar.module.css
+++ b/src/components/navigation/toolbar/toolbar.module.css
@@ -21,6 +21,12 @@
   height: 80%;
 }
 
+@media (min-width: 500px) {
+  .MobileOnly {
+    display: none;
+  }
+}
+
 @media (max-width: 499px) {
   .DesktopOnly {
     display: none;
